[package]
name = "zerus"
version = "0.10.0"
edition = "2021"
authors = ["wcampbell"]
description = "Lightweight binary to download only project required crates for offline crates.io mirror"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/zerus"
repository = "https://github.com/wcampbell0x2a/zerus"
categories = ["development-tools"]
keywords = ["offline", "mirror", "crates", "download", "vendor"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls", "http2"] }
anyhow = "1.0.90"
guppy = "0.17.5"
rayon = "1.10.0"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }

[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
tempfile = "3.13.0"

[profile.release]
strip = true
