[package]
name = "zerus"
version = "0.14.0"
edition = "2021"
authors = ["wcampbell"]
description = "Lightweight tool for creating project-specific and/or general offline crates.io mirrors"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wcampbell0x2a/zerus"
repository = "https://github.com/wcampbell0x2a/zerus"
categories = ["development-tools"]
keywords = ["offline", "mirror", "crates", "download", "vendor"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
reqwest = { version = "0.12.8", default-features = false, features = ["blocking", "rustls-tls", "http2"] }
anyhow = "1.0.90"
guppy = "0.17.5"
rayon = "1.10.0"
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
axum = "0.8"
indicatif = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }


[dev-dependencies]
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
tempfile = "3.13.0"
insta = "1.42.1"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
