[package]
name = "zerus-host"
version = "0.1.0"
edition = "2021"

[dependencies]
zerus = { path = "../" }
actix-web = "4.6.0"
actix-web-lab = "0.20.2"
askama = "0.12.1"
askama_axum = "0.4.0"
bytes = "1.6.0"
env_logger = "0.11.3"
log = "0.4.21"
walkdir = "2.5.0"
serde_derive = "1.0.203"
serde_json = "1.0.117"
